--- a/frontend/src/About.css
+++ b/frontend/src/About.css
@@ -1,4 +1,4 @@
-#mainpara{
+/* #mainpara{
     background-color: white;
     background-color: rgb(244, 240, 240);
     width: 25cm;
@@ -9,4 +9,4 @@
 
 #why{
  
-}
+} */
